# Progsir

./: CMakeLists.txt  README.md  a.out  date.hpp  doctest.h  main.cpp  my_control_print.hpp  my_date.hpp  my_doctest.cpp  my_epidemic.cpp  my_epidemic.hpp  my_epidemic.test.cpp  my_graph.cpp  my_operator.hpp  sir.cpp  sir.hpp  sir_control_print.hpp  sir_doctest.cpp  sir_epidemic.cpp  sir_epidemic.hpp  sir_epidemic.test.cpp  sir_operator.hpp
Progsir_design_test/: CMakeLists.txt  main.cpp  my_control_print.hpp  my_date.hpp  my_doctest.cpp  my_epidemic.cpp  my_epidemic.hpp  my_epidemic.test.cpp  my_main.cpp  my_operator.hpp  sir.cpp  sir.hpp  sir_control_print.hpp  sir_doctest.cpp  sir_epidemic.cpp  sir_epidemic.hpp  sir_epidemic.test.cpp  sir_main.cpp  sir_operator.hpp
